Archive2/a1/1df308be9bc794/output
main.cpp: In function 'int main()':
main.cpp:6:11: error: operands to ?: have different types 'main()::<lambda(int)>' and 'std::nullptr_t'
     f = b ? [](int a) { return 2*a; } : nullptr;
           ^
